--- a/composer.json
+++ b/composer.json
@@ -8,10 +8,13 @@
         "php": "^7.3|^8.0",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
+        "haruncpi/laravel-id-generator": "^1.0",
         "laravel/framework": "^8.54",
-        "laravel/sanctum": "^2.11",
+        "laravel/passport": "^10.1",
         "laravel/tinker": "^2.5",
         "laravel/ui": "^3.3",
+        "league/flysystem-aws-s3-v3": "^1.0",
+        "maatwebsite/excel": "^3.1",
         "yajra/laravel-datatables-oracle": "^9.18"
     },
     "require-dev": {
